--- a/css/sub_style.css
+++ b/css/sub_style.css
@@ -292,14 +292,24 @@ span {
     margin-right: 0;
 }
 
-.nextdirection{
+.nextdirection {
     position: absolute;
     top: 30px;
     left: 30px;
 }
 
-.updirection{
+.updirection {
     right: 30px;
     bottom: 30px;
     position: fixed;
+    display: none;
+    cursor: pointer;
 }
+
+.updirection2 {
+    right: 30px;
+    bottom: 30px;
+    position: fixed;
+    display: none;
+    cursor: pointer;
+  }
